fix(toast): toast and collapse style as template - update UI styles for Collapse and Toast components

--- a/src/shared/ui/Toast/ui/Toast.module.scss
+++ b/src/shared/ui/Toast/ui/Toast.module.scss
@@ -15,12 +15,13 @@
   gap: 10px;
   background: var(--color-bg);
   color: var(--color-text-main);
-  padding: 4px 14px;
+  padding: 12px 14px;
   border-radius: 10px;
   min-width: 240px;
   max-width: 320px;
-  border: 1px solid var(--toast-border);
-  box-shadow: 0 6px 20px var(--shadow-sm);
+
+  // border: 1px solid var(--toast-border);
+  box-shadow: var(--shadow-lg);
   font-size: 14px;
   pointer-events: auto;
   transform: translateY(-20px);
